include_HEADERS=nissa.hpp

#add nissa library
lib_LIBRARIES=$(top_builddir)/lib/libnissa.a

__top_builddir__lib_libnissa_a_SOURCES=

include $(top_srcdir)/src/base/Makefile.am
include $(top_srcdir)/src/communicate/Makefile.am
include $(top_srcdir)/src/dirac_operators/Makefile.am
include $(top_srcdir)/src/eigenvalues/Makefile.am
include $(top_srcdir)/src/free_theory/Makefile.am
include $(top_srcdir)/src/geometry/Makefile.am
include $(top_srcdir)/src/hmc/Makefile.am
include $(top_srcdir)/src/inverters/Makefile.am
include $(top_srcdir)/src/io/Makefile.am
include $(top_srcdir)/src/linalgs/Makefile.am
include $(top_srcdir)/src/measures/Makefile.am
include $(top_srcdir)/src/memory/Makefile.am
include $(top_srcdir)/src/new_types/Makefile.am
include $(top_srcdir)/src/operations/Makefile.am
include $(top_srcdir)/src/random/Makefile.am
include $(top_srcdir)/src/routines/Makefile.am
include $(top_srcdir)/src/threads/Makefile.am
