include $(top_srcdir)/config/baseMakefile.am

include_HEADERS+=nissa.hpp

include $(top_srcdir)/src/base/Makefile.am
include $(top_srcdir)/src/communicate/Makefile.am
include $(top_srcdir)/src/dirac_operators/Makefile.am
#include $(top_srcdir)/src/eigenvalues/Makefile.am
include $(top_srcdir)/src/free_theory/Makefile.am
include $(top_srcdir)/src/geometry/Makefile.am
#include $(top_srcdir)/src/hmc/Makefile.am
include $(top_srcdir)/src/inverters/Makefile.am
include $(top_srcdir)/src/io/Makefile.am
include $(top_srcdir)/src/linalgs/Makefile.am
include $(top_srcdir)/src/measures/Makefile.am
include $(top_srcdir)/src/metaprogramming/Makefile.am
include $(top_srcdir)/src/new_types/Makefile.am
include $(top_srcdir)/src/operations/Makefile.am
include $(top_srcdir)/src/routines/Makefile.am
include $(top_srcdir)/src/threads/Makefile.am
include $(top_srcdir)/src/tuples/Makefile.am
