AM_CPPFLAGS=-I$(top_srcdir)/src

AUTOMAKE_OPTIONS=subdir-objects

LDADD=$(top_builddir)/lib/libnissa.a

bin_PROGRAMS=$(top_builddir)/bin/real_scalar

__top_builddir__bin_real_scalar_SOURCES=real_scalar.cpp
__top_builddir__bin_real_scalar_LDADD=$(LDADD)
__top_builddir__bin_real_scalar_LDFLAGS=$(LDFLAGS)
